objects/project_cloud__Invoice_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Description__c</fullName>
        <inlineHelpText>Any descriptive text about the product or service offering that you may wish to include on your invoice such as &apos;Business Analyst T&amp;M Hours, or Product X)</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Discount_Dollar__c</fullName>
        <inlineHelpText>Any set discount in currency that you wish to apply at the line item level</inlineHelpText>
        <label>Unit Discount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>project_cloud__Discount_Percent__c</fullName>
        <inlineHelpText>Any percentage discount that you wish to apply at the line item level</inlineHelpText>
        <label>Discount (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>project_cloud__Invoice__c</fullName>
        <inlineHelpText>The Invoice record that this line item is related to</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>project_cloud__Invoice__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>project_cloud__Quantity__c</fullName>
        <inlineHelpText>The quantity of units to be invoiced</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Subtotal__c</fullName>
        <description>If Discount = Unit Discount then:
Subtotal = QTR * (Rate - Unit Discount) 
Else If Discount = Discount (%) then
Subtotal = QTR * (Rate * (1 - Discount (%))</description>
        <inlineHelpText>The calculated subtotal (minus tax) at the individual line item level</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>project_cloud__Tax_Rate__c</fullName>
        <inlineHelpText>The tax rate that should be applied to the line item (Sales Tax, VAT, GST etc)</inlineHelpText>
        <label>Tax rate (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>project_cloud__Tax__c</fullName>
        <description>Subtotal * Tax Rate (%)</description>
        <inlineHelpText>The calculated tax at the individual line item level</inlineHelpText>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>project_cloud__Total__c</fullName>
        <description>Subtotal + Tax</description>
        <inlineHelpText>The calculated total at the individual line item level</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>project_cloud__Type__c</fullName>
        <inlineHelpText>Classification of the type of product of service offering</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>project_cloud__Unit_Rate__c</fullName>
        <inlineHelpText>The rate that each unit should be billed at</inlineHelpText>
        <label>Unit Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice Line Item</label>
    <nameField>
        <displayFormat>LI-{00000000}</displayFormat>
        <label>Invoice Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>